// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`project search - highlightMatches simple 1`] = `
<span
  className="line-value"
>
  <span
    className="line-match"
  >
    This is a sample 
  </span>
  <span
    className="query-match"
  >
    sentence
  </span>
  <span
    className="line-match"
  />
</span>
`;

exports[`project search - highlightMatches simple 2`] = `
<span
  className="line-value"
>
  <span
    className="line-match"
  >
    lets 
  </span>
  <span
    className="query-match"
  >
    foo
  </span>
  <span
    className="line-match"
  >
     and then baa
  </span>
</span>
`;

exports[`project search simple 1`] = `
Array [
  Object {
    "column": 11,
    "line": 2,
    "match": "foo",
    "sourceId": "bar.js",
    "text": "  function foo() {",
    "value": "  function foo() {",
  },
  Object {
    "column": 4,
    "line": 3,
    "match": "foo",
    "sourceId": "bar.js",
    "text": "    foo();",
    "value": "    foo();",
  },
]
`;
